@@ -9,7 +9,6 @@ import net.minidev.json.annotate.JsonIgnore;
 import java.util.Collection;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 @Data
 @Builder
@@ -80,6 +79,6 @@ public class EventHistory {
         return eventsList.stream()
             .filter(Objects::nonNull)
             .flatMap(Collection::stream)
-            .collect(Collectors.toList());
+            .toList();
     }
 }
